# league_record

./: .gitignore  .oxlintrc.json  LICENSE.txt  beforeBuild.ps1  copy_dlls_to.ps1  dll_to_lib.ps1  index.html  package-lock.json  package.json  readme.md  riot.txt  tsconfig.json  updateLeagueRecord.ps1
.devcontainer/: devcontainer.json
.github/workflows/: build_release.yml
league_record_types/: index.d.ts  package-lock.json  package.json  readme.md
licenses/: Apache-2.0_LICENSE.txt
src/: bindings.ts  index.html  listeners.ts  main.ts  style.css  tauri.ts  ui.ts  util.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  default-settings.json  example-settings.json  obs.lib  rustfmt.toml  tauri.conf.json  tauri.conf2.json  tauri.windows.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/common/: Cargo.toml
src-tauri/common/src/: lib.rs
src-tauri/icons/: icon.icns
src-tauri/libobs/obs-plugins/64bit/locales/: en-US.pak
src-tauri/lol_rec/: Cargo.toml  Untitled-1.json  Untitled-2.json  Untitled-3.json  build.rs
src-tauri/lol_rec/src/: config.rs  data.rs  main.rs
src-tauri/riot_datatypes/: Cargo.toml  index.d.ts  package.json
src-tauri/riot_datatypes/src/: common.rs  lib.rs
src-tauri/riot_datatypes/src/lcu/: game.rs  mod.rs  session.rs
src-tauri/riot_datatypes/src/riot_api/: mod.rs
src-tauri/settings/: example-settings.json
src-tauri/src/: commands.rs  constants.rs  fileserver.rs  filewatcher.rs  generate_bindings.rs  handlers.rs  helper.rs  helpers.rs  main.rs  recorder.rs  state.rs  util.rs  window.rs
src-tauri/src/app/: event.rs  events.rs  manager.rs  mod.rs  recordings.rs  system_tray.rs  window.rs
src-tauri/src/game_data/: game.rs  metadata.rs  mod.rs  timeline.rs
src-tauri/src/record/: mod.rs
src-tauri/src/recorder/: data.rs  game_listener.rs  highlight_task.rs  league_recorder.rs  metadata.rs  mod.rs  rec.rs  recorder.rs  recording_task.rs  session_event.rs  util.rs  window.rs
src-tauri/src/recorder/game_data/: game.rs  metadata.rs  mod.rs  objects.rs
src-tauri/src/state/: currently_recording.rs  file_watcher.rs  filewatcher.rs  mod.rs  settings.rs  shutdown.rs  tray_state.rs  window_state.rs
src-web/: index.html  script.js  style.css
src-web/src/: main.js  tauri.js  ui.js  util.js
src-web/vanilla-context-menu/: vanilla-context-menu.js
src-web/video-js/: video-js.min.css
src-web/videojs-markers/: videojs-markers.css  videojs-markers.js
src-web/videojs-markers-plugin/: videojs-markers-plugin.min.js  videojs.markers.plugin.min.css
src/css/: base.css  container.css  modal.css  sidebar.css  video.css
src/ts/: bindings.ts  main.ts  ui.ts  util.ts
src/videojs-markers-plugin/: videojs-markers-plugin.min.js
