[workspace]
members = ["riot_datatypes"]

[workspace.package]
version = "2.0.0"
edition = "2021"
authors = ["FX"]
license = "GPL-3.0-or-later"

[workspace.dependencies]
riot_datatypes = { path = "riot_datatypes" }

libobs-recorder = { git = "https://github.com/FFFFFFFXXXXXXX/libobs-recorder.git" }
riot_local_auth = { git = "https://github.com/FFFFFFFXXXXXXX/riot_local_auth" }
shaco = { git = "https://github.com/FFFFFFFXXXXXXX/Shaco" }

tokio = { version = "1.36.0", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }
futures-util = { version = "0.3.30", default-features = false }

serde = "1.0.196"
serde_repr = "0.1.18"
serde_json = "1.0.113"

anyhow = "1.0.79"
log = "0.4.20"
chrono = "0.4.33"

specta = "1.0.5"

[package]
name = "app"
description = "Record and review LoL games"
repository = "https://github.com/FFFFFFFXXXXXXX/league_record"
default-run = "app"
build = "build.rs"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
tauri = { version = "1.5.4", features = [
    "path-all",
    "protocol-asset",
    "system-tray",
    "window-set-fullscreen",
    "window-set-title",
    "window-show",
    "shell-open",
    "updater",
] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

specta = { workspace = true, features = ["export"] }
tauri-specta = { version = "1.0.2", features = ["typescript"] }

tokio = { workspace = true, features = ["macros"] }
tokio-util = { workspace = true, features = ["io"] }
futures-util = { workspace = true }

serde = { workspace = true }
serde_repr = { workspace = true }
serde_json = { workspace = true }

riot_datatypes = { workspace = true }
riot_local_auth = { workspace = true }
shaco = { workspace = true }

libobs-recorder = { workspace = true, features = ["specta"] }

anyhow = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }

reqwest = { version = "0.11.24", features = ["blocking"] }
notify = { version = "6.1.1", default-features = false, features = ["macos_kqueue"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56.0", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi"] }
[target.'cfg(target_os = "linux")'.dependencies]
# todo
[target.'cfg(target_os = "macos")'.dependencies]
# todo

[build-dependencies]
tauri-build = { version = "1.5.1" }
libobs-recorder = { git = "https://github.com/FFFFFFFXXXXXXX/libobs-recorder.git", artifact = "bin:extprocess_recorder" }
build-helper = { git = "https://github.com/FFFFFFFXXXXXXX/libobs-recorder.git" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# [profile.release]
# opt-level = 3
# strip = "debuginfo"
# debug = false
# debug-assertions = false
# lto = "fat"
# panic = "abort"
