[package]
name = "lol_rec"
version = "0.1.0"
edition = "2021"

[dependencies]
libobs-recorder = { git = "https://github.com/FFFFFFFXXXXXXX/libobs-recorder" }
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde_json = "1.0"
serde = { version = "1.0.137", features = ["derive"] }
bytes = "1.1.0"
chrono = "0.4.19"
