[package]
name = "lol_rec"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
libobs-recorder = { git = "https://github.com/FFFFFFFXXXXXXX/libobs-recorder", features = ["full", "serde"] }
shaco = { git = "https://github.com/FFFFFFFXXXXXXX/Shaco", rev = "f617eac" }
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.25.0", features = ["rt", "net", "fs", "time", "macros", "io-std"] }
tokio-util = "0.7.7"
futures = "0.3.26"
anyhow = "1.0.69"
chrono = "0.4.19"
